--- a/static/style.css
+++ b/static/style.css
@@ -1,60 +1,64 @@
-/* Reset some default styles */
-body, h1 {
-    margin: 0;
-    padding: 0;
-}
-
-/* Apply a solid background color */
 body {
-    background-color: #f0f0f0; /* Light gray color */
+    background-image: url('/static/Image/concrete.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
     font-family: Arial, sans-serif;
-    color: #333; /* Text color */
-}
-
-/* Style for the header */
-header {
-    background-color: #333;
+  }
+  
+  header {
+    
     color: #fff;
-    text-align: center;
-    padding: 10px;
-}
-
-/* Style for the main content */
-main {
-    max-width: 600px;
-    margin: 20px auto;
     padding: 20px;
-    background-color: rgba(255, 255, 255, 0.9); /* Transparent white background */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-/* Style for form labels */
-label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-}
-
-/* Style for form input fields */
-input[type="text"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-/* Style for the submit button */
-button[type="submit"] {
-    background-color: #333;
+  }  
+  
+  h1, h2 {
     color: #fff;
-    padding: 10px 20px;
+    text-align: center;  
+  }
+  
+  .content {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  
+  .form {
+    background-color: #ddd;
+    padding: 20px;
+    border-radius: 5px;   
+  }
+  
+  .prediction {
+    color: red;
+    font-weight: bold; 
+    font-size: 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
+  
+  .form-group {
+    margin-bottom: 10px;
+  }
+  
+  label {
+    display: block; 
+    margin-bottom: 5px;
+  }
+  
+  input[type="text"] {
+    padding: 5px;
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+  }
+  
+  button[type="submit"] {
+    background-color: #4CAF50;
     border: none;
-    border-radius: 5px;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
     cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-button[type="submit"]:hover {
-    background-color: #555;
-}
+    border-radius: 5px; 
+  }
